various bug fixes - see CHANGELOG for details
git-svn-id: https://agilephp.svn.sourceforge.net/svnroot/agilephp/trunk@15 9bb1911b-6204-4126-9146-82cb5eeae392

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,3 +5,8 @@
 - Bug fix to AnnotationParser::parseAnnotations regex.
 - Added confirmationUrl to createAgilePhpXML method inside generator/CreateProject.php.
 - Updated PHPdoc's on all classes
+- Bug fix to Identity component constructor when using custom model
+- Nasty bug fix on AnnotatedClass getMethods and getProperties which were causing an infinite loop that resulted in a segmentation fault
+- Bug fix to interceptors and annotations due to annotation parser.
+- Bug fix to identity.User class. Missing roleId accessor and mutator.
+- Refactored test/remoting-example.html call to getBaseJS so that its being gotten from RemotingController (so the remoting controller is pre-set).
